--- a/frontend/src/components/Title/Title.module.scss
+++ b/frontend/src/components/Title/Title.module.scss
@@ -48,12 +48,12 @@
 .smalltext {
     display: flex;
     flex-direction: column;
-    font-family: "OktaNeue-SemiBold";
+    font-family: "OktaNeue-Medium";
     // font-family: "OktaNeue-Normal";
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 200;
     letter-spacing: 1px;
-    font-size: 1.3vw;
+    font-size: 1.4vw;
     // text-transform: uppercase;
     color: $primary-color-darkblue;
     // border: 2px solid blue;
