Done : Overlay Adjust

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -73,5 +73,5 @@ body {
 .overlay-div {
     height: 25%;
     width: 100%;
-    background-color: rgba(240, 234, 234);
+    background-color: $primary-color-darkblue;
 }
