--- a/frontend/src/components/Game/Dialog/Dialog.module.scss
+++ b/frontend/src/components/Game/Dialog/Dialog.module.scss
@@ -15,9 +15,9 @@
     position: relative;
     width: 70%;
     height: 100%;
-    background-color: rgb(29, 28, 28);
-    border: 3px solid white;
-    border-radius: 5px;
+    background-color: rgba(29, 28, 28, 0.804);
+    // border: 1px solid white;
+    border-radius: 8px;
     -webkit-backdrop-filter: blur(7px);
     backdrop-filter: blur(7px);
     z-index: 7000;
@@ -28,7 +28,7 @@
     opacity: 0;
 
     &__text {
-        font-family: "VCR_OSD";
+        font-family: "OktaNeue-Bold";
         font-size: 20px;
         width: 90%;
         height: 70%;
