--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -8,7 +8,7 @@
     left: 0;
     right: 0;
     z-index: 30000;
-    background-color: rgba(240, 234, 234);
+    background-color: $primary-color-darkblue;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -57,13 +57,13 @@
         top: 0;
         width: 100%;
         height: 100%;
-        background: rgb(221, 219, 219);
+        background: #787777;
     }
     &__one {
         position: absolute;
         left: 0;
         top: 0;
-        background: #787777;
+        background: $white-board-opac;
         width: 5px;
         height: 100%;
     }
@@ -79,6 +79,7 @@
         font-size: $fontsize-xl;
         z-index: 10;
         transition: 0.3s ease-in-out;
+        color: $white-board-opac;
     }
 
     button:hover {
@@ -100,10 +101,23 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    color: $white-board-opac;
 
     h2 {
         font-family: "NeueMontreal-Regular";
         font-weight: 200;
         margin: 0;
+    }
+}
+
+@keyframes scaledUp {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
     }
 }
