--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -53,6 +53,17 @@
         flex-direction: column;
         align-items: center;
         position: relative;
+
+        &__wrapper {
+            // border: 2px solid red;
+            position: fixed;
+            z-index: 1000;
+            height: 4%;
+            width: 45%;
+            bottom: 17%; //pic height: 80% margin-top : 7%
+            background: rgb(240, 238, 238);
+            background: linear-gradient(0deg, rgb(240, 238, 238) 22%, rgba(248, 247, 247, 0) 100%);
+        }
     }
 
     &__pic::-webkit-scrollbar {
@@ -61,23 +72,75 @@
     &__pic {
         position: relative;
         width: 100%;
-        height: 72%;
+        height: 63vh;
         display: flex;
         justify-content: center;
         overflow: hidden;
         overflow-y: scroll;
-        margin-top: 11%;
+        margin-top: 7dvh;
         scrollbar-width: none; /* Firefox */
         -ms-overflow-style: none; /* Internet Explorer 10+ */
+        // border: 2px solid red;
 
-        &__wrapper {
-            position: fixed;
-            height: 3%;
-            width: 45%;
-            bottom: 16%; //pic height: 80% margin-top : 7%
-            background: rgb(240, 238, 238);
-            background: linear-gradient(0deg, rgb(240, 238, 238) 22%, rgba(248, 247, 247, 0) 100%);
+        &__box {
+            position: relative;
+            width: 95%;
+            padding-top: 0%;
+            height: 117vw;
+            display: flex;
+            flex-direction: column;
+
+            row-gap: 0px;
+            gap: 15px;
+
+            &__ctn {
+                position: relative;
+                width: 100%;
+                display: flex;
+                aspect-ratio: 2;
+                overflow: hidden;
+                justify-content: space-between;
+                gap: 15px;
+                border-radius: 7px;
+                background-color: rgb(235, 233, 233);
+                img {
+                    width: 100%;
+                }
+
+                &__alone {
+                    width: 95%;
+                    height: 92%;
+                    border-radius: 7px;
+                    overflow: hidden;
+                    // border: 2px solid red;
+                    background-color: rgb(235, 233, 233);
+                }
+            }
+            &__ctn__two {
+                position: relative;
+                width: 100%;
+                aspect-ratio: 2.1;
+                overflow: hidden;
+                // border: 2px solid rgb(13, 255, 0);
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                gap: 15px;
+
+                &__small {
+                    width: 50%;
+                    height: 100%;
+                    border-radius: 7px;
+                    overflow: hidden;
+                    background-color: transparent;
+                }
+
+                img {
+                    width: 100%;
+                }
+            }
         }
+
         &__button {
             cursor: pointer;
             border: none;
@@ -138,72 +201,13 @@
                 margin: 0;
                 padding: 0;
                 text-align: left;
-                font-size: 1.65vw;
+                font-size: 2.3vw;
             }
 
             &__ask {
                 margin-top: -5px;
                 line-height: 0;
                 height: 15px;
-            }
-        }
-        &__box {
-            position: relative;
-            width: 95%;
-            padding-top: 0%;
-            height: 117vw;
-            display: flex;
-            flex-direction: column;
-
-            row-gap: 0px;
-            gap: 15px;
-
-            &__ctn {
-                // border: 2px solid red;
-                position: relative;
-                width: 100%;
-                display: flex;
-                aspect-ratio: 2;
-                overflow: hidden;
-                justify-content: space-between;
-                gap: 15px;
-                border-radius: 7px;
-                background-color: rgb(235, 233, 233);
-                img {
-                    width: 100%;
-                }
-
-                &__alone {
-                    width: 95%;
-                    height: 92%;
-                    border-radius: 7px;
-                    overflow: hidden;
-                    // border: 2px solid red;
-                    background-color: rgb(235, 233, 233);
-                }
-            }
-            &__ctn__two {
-                position: relative;
-                width: 100%;
-                aspect-ratio: 2.1;
-                overflow: hidden;
-                // border: 2px solid rgb(13, 255, 0);
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                gap: 15px;
-
-                &__small {
-                    width: 50%;
-                    height: 100%;
-                    border-radius: 7px;
-                    overflow: hidden;
-                    background-color: transparent;
-                }
-
-                img {
-                    width: 100%;
-                }
             }
         }
     }
