Done : Scroll To Discover component

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -35,6 +35,14 @@ body {
     height: 100dvh;
 }
 
+.title {
+    // border: 2px solid red;
+    height: 100vh;
+    position: relative;
+}
+
+
+
 .canvas {
     position: fixed;
     top: 0;
