--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -35,11 +35,11 @@
 
 .settingUp {
     position: absolute;
-    top: 56%;
+    top: 58vh;
     color: #787777;
     font-family: "NeueMontreal-Regular";
     text-transform: uppercase;
-    font-size: $fontsize-s;
+    font-size: $fontsize-m;
     font-weight: 700;
 }
 
@@ -75,8 +75,8 @@
         background: none;
         border: none;
         cursor: pointer;
-        font-family: "NeueMontreal-Medium";
-        font-size: $fontsize-xl;
+        font-family: "OktaNeue-Bold";
+        font-size: 2.5vw;
         z-index: 10;
         transition: 0.3s ease-in-out;
         color: $white-board-opac;
@@ -104,7 +104,7 @@
     color: $white-board-opac;
 
     h2 {
-        font-family: "NeueMontreal-Regular";
+        font-family: "OktaNeue-Normal";
         font-weight: 200;
         margin: 0;
     }
