Done : CSS Adjust / Project / Location

--- a/frontend/src/components/Location/Location.module.scss
+++ b/frontend/src/components/Location/Location.module.scss
@@ -4,7 +4,7 @@
 .location {
     position: fixed;
     top: -1.5vh;
-    right: 2vw;
+    left: 4vw;
     mix-blend-mode: difference;
     color: white;
     font-family: "OktaNeue-Bold";
