--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -48,7 +48,7 @@
         width: 65%;
         height: 100%;
         margin-left: 7vw;
-        margin-top: 0;
+        margin-top: 2vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -301,8 +301,8 @@
 
     &__close {
         position: absolute;
-        top: 1.1rem;
-        right: 2rem;
+        top: 2vh;
+        right: 2vw;
         display: flex;
         align-items: center;
         gap: 3px;
@@ -339,18 +339,21 @@
 
     &__button {
         position: absolute;
-        bottom: 9%;
-        right: 5.7vw;
+        bottom: 6%;
+        right: 2vw;
         // border: 2px solid red;
         width: 10%;
         display: flex;
+        justify-content: flex-end;
 
         button {
             margin: 0;
             padding: 0;
             width: 40%;
+            // border: 2px solid red;
         }
         span {
+            
             font-family: "OktaNeue-SemiBold";
             text-transform: uppercase;
             font-size: 1.3vw;
