--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -1,14 +1,15 @@
 @import "../../styles/theme";
 @import "../../styles/font";
 
+
+
 .menu {
     position: fixed;
     z-index: 10000;
     top: 0;
-    right: -33%; //10px;
-    height: 100%;
-    width: 33%;
-    min-width: 380px;
+    right: -33dvw; //10px;
+    height: 100vh;
+    width: 33dvw;
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
     font-family: "OktaNeue-Medium";
@@ -43,6 +44,7 @@
         line-height: 1;
         gap: 3px;
         height: 35%;
+        
         &__wrapper {
             display: flex;
             flex-direction: column;
@@ -83,7 +85,7 @@
         flex-direction: column;
         margin-left: 8%;
         height: 60%;
-        // border: 2px solid blue;
+  
         p {
             margin: 0;
         }
@@ -120,11 +122,12 @@
 
     &__social {
         margin: 8%;
-        margin-bottom: 5%;
+        margin-bottom: 5vh;
         display: flex;
         flex-direction: column;
         gap: 9px;
         font-size: 14px;
+        
 
         a {
             position: relative;
@@ -169,4 +172,29 @@
     100% {
         transform: scale(1);
     }
+}
+
+
+@media screen and (max-width: 1000px) {
+    .menu {
+        width: 40dvw;
+        right: -40vw;
+    }
+}
+
+@media  screen and (max-width: 900px){
+    .menu {
+        width: 100dvw;
+        right: -100vw;
+        height: 100vh;
+
+        &__item {
+            margin-top: 5vh;
+        }
+
+        &__close {
+            font-size: 10px;
+        }
+    }   
+    
 }
