--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -17,6 +17,21 @@
     transform: rotate(90deg);
     transform-origin: left bottom;
     top: -3%;
+    user-select: none;
+    -webkit-user-select: none;
+
+    &__soundsecrets {
+        width: 35%;
+        // border: 2px solid red;
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+    }
+    &__secrets {
+        transform: rotate(180deg);
+        width: 100%;
+    }
 
     &__logo {
         width: 30px;
@@ -75,6 +90,7 @@
     }
 
     &__sound {
+        // border: 2px solid red;
         margin: 0;
         margin-left: 0px;
         width: 28px;
