Done : Small Adjust CSS

--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     border-radius: 3px;
-    font-family: "OktaNeue-Bold";
+    font-family: "OktaNeue-SemiBold";
     letter-spacing: 1px;
     font-size: $fontsize-s-nav;
     mix-blend-mode: difference;
