--- a/frontend/src/components/SecretsFound/SecretsFound.module.scss
+++ b/frontend/src/components/SecretsFound/SecretsFound.module.scss
@@ -12,7 +12,7 @@
 
     span {
         text-transform: uppercase;
-        font-family: "OktaNeue-Bold";
+        font-family: "OktaNeue-SemiBold";
         font-size: $fontsize-s-nav;
      
     }
