--- a/frontend/src/components/Controls/Controls.module.scss
+++ b/frontend/src/components/Controls/Controls.module.scss
@@ -19,8 +19,8 @@
 }
 
 .controls__wrapper {
-    width: 0%;
-    height: 0%;
+    width: 70vw;
+    height: 100vh;
     margin-top: -2%;
     display: flex;
     justify-content: center;
@@ -36,58 +36,73 @@
     position: relative;
     font-family: "NeueMontreal-Regular";
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     justify-content: space-around;
     padding: 60px 20px;
     align-items: center;
     height: 100%;
     width: 100%;
     color: $primary-color-darkblue;
+    border: 2px solid blue;
 
-    &__keyboard {
-        font-family: "NeueMontreal-Medium";
-        font-size: $fontsize-m;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 12%;
-        margin-top: 20px;
-        width: 20%;
-        min-width: 270px;
-        color: $primary-color-darkblue;
-
-        &__ctn {
-            font-family: "NeueMontreal-Medium";
-            width: 60%;
+    &__key {
+        position: relative;
+        width: 50px;
+        height: 50px;
+     
+        &__front {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            border: 1px solid rgb(125, 125, 125);
+            background-color: #f1efef;
+            border-radius: 3px;
+            z-index: 3;
             display: flex;
-            justify-content: space-between;
-            // border: 2px solid blue;
+            justify-content: center;
+            font-weight: 700;
+            font-size: 20px;
+            color: #3e3a3a;
+            &__arrow {
+                width: 19px;
+                height: 22px;
+                margin-top: 6px;
+                transform: translate(-50%, -50%);
+
+                &__right {
+                    transform: rotate(90deg);
+                }
+                &__left {
+                    transform: rotate(-90deg);
+                }
+            }
         }
-        &__input {
-            width: 50%;
-            display: flex;
-            justify-content: space-between;
-            // border: 2px solid blue;
-            input {
-                display: none;
-            }
 
-            label {
-                cursor: pointer;
-                color: #8e8c8c;
-                transition: 0.3s ease-in-out;
-            }
-            input:checked ~ label {
-                color: rgb(24, 23, 23);
-            }
+        &__back {
+            position: absolute;
+            top: 7px;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(148, 148, 148);
+            border: 1px solid rgb(125, 125, 125);
+            border-radius: 3px;
+            z-index: 1;
+        }
+        span {
+            font-size: 27px;
+            text-align: center;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            color: #3e3a3a;
         }
     }
 
     &__space {
         position: relative;
-        width: 150px;
+        width: 140px;
         height: 50px;
-
         font-size: 22px;
 
         &__front {
@@ -120,32 +135,33 @@
         }
     }
 
-    &__key {
-        position: relative;
-        width: 50px;
-        height: 50px;
+    &__instructions {
+        display: flex;
+        
 
-        &__front {
-            position: absolute;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            border: 1px solid rgb(125, 125, 125);
-            background-color: #f1efef;
-            border-radius: 3px;
-            z-index: 3;
-            // transition: 0.5s ease-in-out;
+        &__item {
+            // width: 100px solid red;
+            // height: 20px;
+            // border: 2px solid green;
+            display: flex;
+            justify-content: left;
+        }
+        &__keys {
             display: flex;
             justify-content: center;
-            font-weight: 700;
-            font-size: 20px;
-            color: #3e3a3a;
+            align-items: center;
+            gap: 10px;
+            margin-top: 20px;
+            font-size: $fontsize-m;
+            font-family: "NeueMontreal-Medium";
+            color: $primary-color-darkblue;
+
             &__arrow {
                 width: 19px;
                 height: 22px;
                 margin-top: 6px;
                 // border: 2px solid red;
-                transform: translate(-50%, -50%);
+                width: 40%;
 
                 &__right {
                     transform: rotate(90deg);
@@ -153,96 +169,64 @@
                 &__left {
                     transform: rotate(-90deg);
                 }
+
+               
             }
         }
-
-        &__back {
-            position: absolute;
-            top: 7px;
-            width: 100%;
-            height: 100%;
-            background-color: rgb(148, 148, 148);
-            border: 1px solid rgb(125, 125, 125);
-            border-radius: 3px;
-            z-index: 1;
-        }
-        span {
-            font-size: 27px;
-            text-align: center;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            color: #3e3a3a;
-        }
     }
-
-    &__content {
+    &__keyboard {
+        font-family: "NeueMontreal-Medium";
+        font-size: $fontsize-m;
         display: flex;
-        box-sizing: border-box;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        // border: 2px solid red;
-        padding: 0px 60px;
-        width: 100%;
+        height: 12%;
+        margin-top: 20px;
+        width: 20%;
+        min-width: 270px;
+        color: $primary-color-darkblue;
+         
 
-        &__keys {
+        &__ctn {
+            font-family: "NeueMontreal-Medium";
+            width: 60%;
             display: flex;
-            gap: 15px;
-            align-items: center;
+            justify-content: space-between;
+       
         }
-        &__left,
-        &__right {
+        &__input {
+            width: 50%;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 40px;
-            width: 20%;
-            // border: 2px solid green;
-        }
+            justify-content: space-between;
+            // border: 2px solid blue;
+            input {
+                display: none;
+            }
 
-        &__left {
-            &__runleft {
-                align-items: center;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
+            label {
+                cursor: pointer;
+                color: #8e8c8c;
+                transition: 0.3s ease-in-out;
             }
-        }
-        &__right {
-            &__runright {
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                gap: 10px;
-            }
-            &__space {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 10px;
-            }
-        }
-
-        &__left {
-            &__interact {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 10px;
-            }
-        }
-        &__center {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            &__video {
-                width: 80%;
-                overflow: hidden;
+            input:checked ~ label {
+                color: rgb(24, 23, 23);
             }
         }
     }
 
+
+    &__video {
+        display: flex;
+        height: 70%;
+        width: 30%;
+        border: 2px solid red;
+        &__ctn {
+            // display: none;
+            border: 2px solid blue;
+            width: 100%;
+        }
+
+    }
     &__gotoplay {
         height: 15%;
 
