--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -12,7 +12,7 @@
     width: 33dvw;
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
-    font-family: "OktaNeue-Medium";
+    font-family: "OktaNeue-Normal";
     font-weight: 600;
     display: flex;
     flex-direction: column;
