--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -161,7 +161,7 @@
             display: flex;
             justify-content: space-between;
             height: 3.5rem;
-            font-family: "OktaNeue-SemiBold";
+            font-family: "OktaNeue-Medium";
             font-style: normal;
             text-transform: uppercase;
             font-size: 0.7rem;
