--- a/frontend/src/components/Title/Title.module.scss
+++ b/frontend/src/components/Title/Title.module.scss
@@ -13,33 +13,36 @@
     &__first,
     &__second {
         width: 100%;
-        font-family: "OktaNeue-Bold";
+        font-family: "OktaNeue-Medium";
         color: $primary-color-darkblue;
-        font-size: $fontsize-title;
+        font-size: 13vw;
         font-weight: 500;
-        line-height: 1.2;
         margin: 0;
-        height: calc($fontsize-title - 30px);
+        padding: 0;
+        height: 11.5vw;
+        // border: 2px solid red;
         display: flex;
-        align-items: center;
+        align-items: end;
         letter-spacing: -0.1rem;
+        line-height: 1.1;
     }
     &__second {
         width: 100%;
+        font-family: "OktaNeue-Medium";
         height: calc($fontsize-title - 30px);
         display: flex;
         align-items: center;
 
         &__text {
-            font-family: "OktaNeue-Bold";
+            font-family: "OktaNeue-Medium";
             color: $primary-color-darkblue;
-            font-size: $fontsize-title;
+            font-size: 13vw;
             font-weight: 500;
             line-height: 1.2;
             margin: 0;
             height: calc($fontsize-title - 30px);
             display: flex;
-            align-items: center;
+            align-items: end;
             letter-spacing: -0.1rem;
         }
     }
@@ -48,16 +51,16 @@
 .smalltext {
     display: flex;
     flex-direction: column;
-    font-family: "OktaNeue-Bold";
+    font-family: "NeueMontreal-Regular";
     // font-family: "OktaNeue-Normal";
-    text-transform: uppercase;
+    // text-transform: uppercase;
     font-weight: 200;
     letter-spacing: 1px;
     font-size: 1.5vw;
     // text-transform: uppercase;
     color: $primary-color-darkblue;
     // border: 2px solid blue;
-    margin-top: 3vw;
+    margin-top: -0.5vw;
     margin-left: 1vw;
     height: 87%;
 
