--- a/frontend/src/components/Game/Dialog/Dialog.module.scss
+++ b/frontend/src/components/Game/Dialog/Dialog.module.scss
@@ -14,7 +14,7 @@
 .dialog {
     position: relative;
     width: 70%;
-    height: 100%;
+    height: 90%;
     background-color: rgba(29, 28, 28, 0.804);
     // border: 1px solid white;
     border-radius: 8px;
@@ -28,12 +28,13 @@
     opacity: 0;
 
     &__text {
-        font-family: "OktaNeue-Bold";
+        font-family: "NeueMontreal-Regular";
         font-size: 20px;
         width: 90%;
-        height: 70%;
+        height: 50%;
         display: flex;
         justify-content: center;
+        align-items: center;
         color: white;
         p {
             // text-align: center;
