--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -2,104 +2,107 @@
 @import "../../styles/theme";
 
 .navbar {
-    z-index: 5000;
-    position: fixed;
-    height: 35px;
-    width: 99vh;
+  z-index: 5000;
+  position: fixed;
+  height: 35px;
+  width: 100vh;
+  min-width: 550px;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 3px;
+  font-family: "OktaNeue-SemiBold";
+  letter-spacing: 1px;
+  font-size: 1vw;
+  mix-blend-mode: difference;
+  color: white;
+  transform-origin: left top;
+  transform: rotate(90deg);
+  top: 0;
+  left: 35px;
+  user-select: none;
+  -webkit-user-select: none;
+
+  &__soundsecrets {
+    width: 35%;
+    // border: 2px solid red;
+    align-items: center;
     display: flex;
     justify-content: space-between;
-    border-radius: 3px;
-    font-family: "OktaNeue-SemiBold";
-    letter-spacing: 1px;
-    font-size: $fontsize-s-nav;
-    mix-blend-mode: difference;
-    color: white;
-    transform: rotate(90deg);
-    transform-origin: left bottom;
-    top: -3%;
-    user-select: none;
-    -webkit-user-select: none;
+    gap: 20px;
+  }
+  &__secrets {
+    transform: rotate(180deg);
+    width: 100%;
+  }
 
-    &__soundsecrets {
-        width: 35%;
-        // border: 2px solid red;
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
-        gap: 20px;
-    }
-    &__secrets {
-        transform: rotate(180deg);
-        width: 100%;
-    }
+  &__logo {
+    width: 30px;
+    height: 30px;
+    margin-left: 0.3vw;
+    justify-content: center;
+    align-items: center;
+    transform: translate(-50%, -50%);
+    transform: rotate(-90deg);
+  }
 
-    &__logo {
-        width: 30px;
-        height: 30px;
-        justify-content: center;
-        align-items: center;
-        transform: translate(-50%, -50%);
-        transform: rotate(-90deg);
-    }
+  &__rotator {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 
-    &__rotator {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
+  &__ctn {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 0.3vh;
+    width: 55%;
+    transform: translate(-50%, -50%);
+    transform: rotate(180deg);
+    &__playview {
+      display: flex;
+      justify-content: right;
+      width: 50%;
     }
 
-    &__ctn {
-        display: flex;
-        align-items: center;
-        justify-content: left;
-        gap: 10%;
-        width: 55%;
-        transform: translate(-50%, -50%);
-        transform: rotate(180deg);
-        &__playview {
-            display: flex;
-            justify-content: right;
-            width: 50%;
-        }
-
-        &__wrapper {
-            overflow: hidden;
-            height: $fontsize-s-nav;
-            display: flex;
-            flex-direction: column;
-            // border: 2px solid red;
-            padding: 0px 10px;
-        }
-
-        &__wrapper:hover .navbar__ctn__button {
-            transform: translateY(0%);
-        }
-        &__button {
-            cursor: pointer;
-            transform: translateY(-50%);
-            transition: 0.3s ease-in-out;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            span {
-                line-height: 1;
-                height: $fontsize-s-nav;
-                margin: 0;
-            }
-        }
+    &__wrapper {
+      overflow: hidden;
+      height: 1vw;
+      display: flex;
+      flex-direction: column;
+      // border: 2px solid red;
+      padding: 0px 10px;
     }
 
-    &__sound {
-        // border: 2px solid red;
+    &__wrapper:hover .navbar__ctn__button {
+      transform: translateY(0%);
+    }
+    &__button {
+      cursor: pointer;
+      transform: translateY(-50%);
+      transition: 0.3s ease-in-out;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      span {
+        line-height: 1;
+        height: 1vw;
         margin: 0;
-        margin-left: 0px;
-        width: 28px;
-        height: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 5px;
-        transform: translate(-50%, -50%);
-        transform: rotate(-90deg);
+      }
     }
+  }
+
+  &__sound {
+    // border: 2px solid red;
+    margin: 0;
+    margin-left: 0px;
+    width: 28px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    transform: translate(-50%, -50%);
+    transform: rotate(-90deg);
+  }
 }
