--- a/frontend/src/components/SecretsFound/SecretsFound.module.scss
+++ b/frontend/src/components/SecretsFound/SecretsFound.module.scss
@@ -1,19 +1,17 @@
 @import "../../styles/theme";
 @import "../../styles/font";
 
-
 .secrets {
-    // border: 2px solid red;
-    // position: fixed;
-    // bottom: 0.2vh;
-    // left: 4vw;
-    color: white;
-    mix-blend-mode: difference;
+  // border: 2px solid red;
+  // position: fixed;
+  // bottom: 0.2vh;
+  // left: 4vw;
+  color: white;
+  mix-blend-mode: difference;
 
-    span {
-        text-transform: uppercase;
-        font-family: "OktaNeue-SemiBold";
-        font-size: $fontsize-s-nav;
-     
-    }
+  span {
+    text-transform: uppercase;
+    font-family: "OktaNeue-SemiBold";
+    font-size: 1vw;
+  }
 }
