--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -27,7 +27,7 @@
     cursor: pointer;
     &__cross {
       margin-top: 3px;
-      width: 25px;
+      width: 2vw;
       transition: 0.3s ease-in-out;
     }
   }
@@ -49,7 +49,7 @@
       flex-direction: column;
       font-size: 4.5vw;
       overflow: hidden;
-      height: 4.5vw;
+      height: 4.8vw;
       width: 100%;
       text-align: left;
     }
@@ -64,12 +64,13 @@
       margin-bottom: 0;
       padding: 0;
       transform: translateY(-50%);
-      margin-top: -15px;
+      margin-top: -0.3vw;
       span {
         margin: 0;
         margin-top: 2px;
         padding: 0;
-        height: 4.5vw;
+        height: 5vw;
+        // border: 2px solid red;
       }
     }
     &__span:hover {
