--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -5,7 +5,7 @@
   z-index: 5000;
   position: fixed;
   height: 35px;
-  width: 100vh;
+  width: 100dvh;
   min-width: 550px;
   display: flex;
   justify-content: space-between;
