--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -34,8 +34,7 @@
 }
 
 .settingUp {
-  position: absolute;
-  top: 58vh;
+  margin-top: 1vw;
   color: #787777;
   font-family: "NeueMontreal-Regular";
   text-transform: uppercase;
@@ -45,6 +44,8 @@
 
 .loaderbar {
   position: absolute;
+  display: flex;
+  justify-content: center;
   top: 55%;
   left: 50%;
   width: 25dvw;
@@ -220,7 +221,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 3%;
+  margin-top: -5vw;
 }
 
 .texts__mobile {
